syntax = "proto3";

option csharp_namespace = "Travely.SchedulerManager.API";

service Reminder{
	rpc Get (GetRequest) returns (GetResponse);
	rpc GetAll (GetAllRequest) returns (GetAllResponse);
	rpc Create (CreateRequest) returns (CreateResponse);
	rpc Update (UpdateRequest) returns (UpdateResponse);
	rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message GetRequest{
	int32 bookingId = 1;
}

message GetResponse{
	Notification notification = 1;
}

message GetAllRequest{
}

message	GetAllResponse{
	repeated Notification notifications = 1;
}

message CreateRequest{
	int32 tourId = 1;
	string tourName = 2;
	int32 bookingId = 3;
	string bookingName = 4;
	int32 expireDate = 5;
	string tourNotes = 6;
	string bookingNotes = 7;
	repeated int32 assignedUserIds = 8;
}

message CreateResponse{
	bool succeed = 1;
}

message UpdateRequest{
	int32 tourId = 1;
	string tourName = 2;
	int32 bookingId = 3;
	string bookingName = 4;
	int32 expireDate = 5;
	string tourNotes = 6;
	string bookingNotes = 7;
	repeated int32 assignedUserIds = 8;
}

message UpdateResponse{
	bool succeed = 1;
}

message DeleteRequest{
	int32 bookingId = 1;
}

message DeleteResponse{
	bool succeed = 1;
}

message Notification{
	int32 tourId = 1;
	int32 bookingId = 2;
	string message = 3;
	int32 scheduleDate = 4;
	repeated int32 assignedUserIds = 5;
}
